force-app/main/default/objects/maps__LiveDailyDriveTrip__c/maps__LiveDailyDriveTrip__c.object-meta.xml
<CustomObject>
    <label>Maps Live Daily Drive Trip</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Maps Live Daily Drive Trip Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Live Daily Drive Trips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>