force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__AMorPMDriveTrip__c.field-meta.xml
<CustomField>
    <fullName>maps__AMorPMDriveTrip__c</fullName>
    <description>AM/PM is determined based on the Timezone of the device</description>
    <inlineHelpText>AM/PM is determined based on the Timezone of the device</inlineHelpText>
    <label>AM or PM Drive Trip</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>AM/PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>