force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__BeginTripCountry__c.field-meta.xml
<CustomField>
    <fullName>maps__BeginTripCountry__c</fullName>
    <description>Country where the start of the trip took place</description>
    <formula>maps__BeginTripStop__r.maps__Country__c</formula>
    <inlineHelpText>Country where the start of the trip took place</inlineHelpText>
    <label>Begin Trip Country</label>
    <type>Text</type>
</CustomField>