force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__BeginTripState__c.field-meta.xml
<CustomField>
    <fullName>maps__BeginTripState__c</fullName>
    <description>State where the start of the trip took place</description>
    <formula>maps__BeginTripStop__r.maps__State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>State where the start of the trip took place</inlineHelpText>
    <label>Begin Trip State</label>
    <type>Text</type>
</CustomField>