force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__BeginTripStop__c.field-meta.xml
<CustomField>
    <fullName>maps__BeginTripStop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Event Record, which is the start of this trip</description>
    <inlineHelpText>Lookup to the Event Record, which is the start of this trip</inlineHelpText>
    <label>Begin Trip Stop</label>
    <referenceTo>maps__LiveAssetDailySummaryEvent__c</referenceTo>
    <relationshipName>BeginTripStops</relationshipName>
    <type>Lookup</type>
</CustomField>