force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__BeginTripStreet__c.field-meta.xml
<CustomField>
    <fullName>maps__BeginTripStreet__c</fullName>
    <description>Street where the start of the trip took place</description>
    <formula>maps__BeginTripStop__r.maps__Street_Address__c</formula>
    <inlineHelpText>Street where the start of the trip took place</inlineHelpText>
    <label>Begin Trip Street</label>
    <type>Text</type>
</CustomField>