force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__DrivingOutsideWorkingHours__c.field-meta.xml
<CustomField>
    <fullName>maps__DrivingOutsideWorkingHours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indication if trip took place outside of denoted working hours</description>
    <inlineHelpText>Indication if trip took place outside of denoted working hours</inlineHelpText>
    <label>Driving Outside Working Hours</label>
    <type>Checkbox</type>
</CustomField>