force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__EndTripDateTime__c.field-meta.xml
<CustomField>
    <fullName>maps__EndTripDateTime__c</fullName>
    <description>Time when this trip ended</description>
    <formula>maps__EndTripStop__r.maps__EventStarted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time when this trip ended</inlineHelpText>
    <label>End Trip Date/Time</label>
    <type>DateTime</type>
</CustomField>