force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__EndTripStop__c.field-meta.xml
<CustomField>
    <fullName>maps__EndTripStop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Event Record, which is the end of this trip</description>
    <inlineHelpText>Lookup to the Event Record, which is the end of this trip</inlineHelpText>
    <label>End Trip Stop</label>
    <referenceTo>maps__LiveAssetDailySummaryEvent__c</referenceTo>
    <relationshipName>EndTripStops</relationshipName>
    <type>Lookup</type>
</CustomField>