force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__EndTripStreet__c.field-meta.xml
<CustomField>
    <fullName>maps__EndTripStreet__c</fullName>
    <description>Street where the end of the trip took place</description>
    <formula>maps__EndTripStop__r.maps__Street_Address__c</formula>
    <inlineHelpText>Street where the end of the trip took place</inlineHelpText>
    <label>End Trip Street</label>
    <type>Text</type>
</CustomField>