force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__LiveDriver__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveDriver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denoted driver of this trip</description>
    <inlineHelpText>Denoted driver of this trip</inlineHelpText>
    <label>Live Driver</label>
    <referenceTo>maps__LiveDriver__c</referenceTo>
    <relationshipName>LiveDailyTrips</relationshipName>
    <type>Lookup</type>
</CustomField>