force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__TotalNumOfHardBrakeEventsInTrip__c.field-meta.xml
<CustomField>
    <fullName>maps__TotalNumOfHardBrakeEventsInTrip__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total # of hard braking events within this trip</description>
    <inlineHelpText>Total # of hard braking events within this trip</inlineHelpText>
    <label>Total # of Hard Braking Events this Trip</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>