force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__TotalNumOfSpeedingEventsInTrip__c.field-meta.xml
<CustomField>
    <fullName>maps__TotalNumOfSpeedingEventsInTrip__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total # of speeding events within this trip</description>
    <inlineHelpText>Total # of speeding events within this trip</inlineHelpText>
    <label>Total # of Speeding Events within Trip</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>