force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__TotalNumOfSpeedThresholdEventsInTrip__c.field-meta.xml
<CustomField>
    <fullName>maps__TotalNumOfSpeedThresholdEventsInTrip__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total # of max speed threshold events within this trip</description>
    <inlineHelpText>Total # of max speed threshold events within this trip</inlineHelpText>
    <label>Total # of Speed Thresh Events in Trip</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>