force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__TripDistanceKm__c.field-meta.xml
<CustomField>
    <fullName>maps__TripDistanceKm__c</fullName>
    <label>Trip Distance (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>