force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__TripDistanceMiles__c.field-meta.xml
<CustomField>
    <fullName>maps__TripDistanceMiles__c</fullName>
    <description>This is the total trip distance in miles.</description>
    <formula>ROUND(maps__TripDistanceKm__c * 0.62137, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the total trip distance in miles.</inlineHelpText>
    <label>Trip Distance (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>