force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__TripDriveTimeHours__c.field-meta.xml
<CustomField>
    <fullName>maps__TripDriveTimeHours__c</fullName>
    <description>Duration of this trip, in hours</description>
    <formula>ROUND((maps__EndTripStop__r.maps__EventStarted__c - maps__BeginTripStop__r.maps__EventEnded__c)*24, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Duration of this trip, in hours</inlineHelpText>
    <label>Trip Drive Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>