force-app/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__TripDriveTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>maps__TripDriveTimeMinutes__c</fullName>
    <description>Duration of this trip, in minutes</description>
    <formula>ROUND((maps__EndTripStop__r.maps__EventStarted__c - maps__BeginTripStop__r.maps__EventEnded__c)*24*60, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Duration of this trip, in minutes</inlineHelpText>
    <label>Trip Drive Time (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>